--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "com.kingdox.uniflux.scene",
+    "name": "com.xavierarpa.uniflux.scene",
     "displayName": "UniFlux.Scene",
-    "author": { "name": "Kingdox", "url": "https://github.com/kingdox" },
+    "author": { "name": "Xavier Arpa", "url": "https://github.com/xavierarpa" },
     "version": "1.0.0",
     "unity": "2020.1",
     "description": "Scene Manager with UniFlux.",
