--- a/package.json
+++ b/package.json
@@ -8,5 +8,7 @@
     "keywords": [ "Flux", "Unity", "UniFlux", "scene" ],
     "license": "MIT",
     "category": "Flux",
-    "dependencies": {}
+    "dependencies": {
+        "com.xavierarpa.uniflux":"^1.0.0"
+    },
 }
